--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,10 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/firstlaunch/index",
+    "pages/secondscr/secondscr",
+    "pages/index/index",
+    "pages/todo/todo",
+    "pages/my/my"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -16,6 +20,23 @@
     "van-tabbar": "/miniprogram_npm/vant-weapp/tabbar/index",
     "van-tabbar-item": "/miniprogram_npm/vant-weapp/tabbar-item/index",
     "van-row": "/miniprogram_npm/vant-weapp/row/index",
-    "van-col": "/miniprogram_npm/vant-weapp/col/index"
+    "van-col": "/miniprogram_npm/vant-weapp/col/index",
+    "van-tab": "/miniprogram_npm/vant-weapp/tab/index",
+    "van-tabs": "/miniprogram_npm/vant-weapp/tabs/index",
+    "van-steps": "/miniprogram_npm/vant-weapp/steps/index"
+  },
+
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/index/index"
+      },
+      {
+        "pagePath": "pages/todo/todo"
+      },
+      {
+        "pagePath": "pages/my/my"
+      }
+    ]
   }
 }
