--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "ripples.wxss": "^1.1.0",
     "vant-weapp": "^0.5.20"
   },
   "devDependencies": {},
