--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -35,7 +35,8 @@
     "van-nav-bar": "/miniprogram_npm/vant-weapp/nav-bar/index",
     "van-picker": "/miniprogram_npm/vant-weapp/picker/index",
     "van-collapse": "/miniprogram_npm/vant-weapp/collapse/index",
-    "van-collapse-item": "/miniprogram_npm/vant-weapp/collapse-item/index"
+    "van-collapse-item": "/miniprogram_npm/vant-weapp/collapse-item/index",
+    "van-icon": "/miniprogram_npm/vant-weapp/icon/index"
   },
 
   "tabBar": {
